# amqp-libuv

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  conanfile.txt
res/cmake/: CodeCoverage.cmake
src/: CMakeLists.txt  entrypoint.cc  entrypoint.h  main.cc  sample.cc  sample.hh
src/example/: communicator.cc  communicator.h  module.cc  module.h  receiver.cc  receiver.h  sender.cc  sender.h  timer.h
src/rbmq/: uvConnectionHandler.cc  uvConnectionHandler.h  uvwConnection.cc  uvwConnection.h  uvwConnectionHandler.cc  uvwConnectionHandler.h
src/rbmq/utils/: concurentQueue.h
test/: CMakeLists.txt  test_addition.cc  test_sample.cc
